Day3/hello-microservice/mariadb-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      volumes:
      - name: mariadb-storage
        persistentVolumeClaim:
          claimName: mariadb-pvc-jegan # Replace 'jegan' with your name
      containers:
      - name: mariadb
        image: bitnami/mariadb:latest

        volumeMounts:
        - name: mariadb-storage
          mountPath: /bitnami/mariadb/data
