Day3/hello-microservice/openshift-helloms-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openshift-hello-ms
  name: openshift-hello-ms
spec:
  replicas: 3
  selector:
    matchLabels:
      app: openshift-hello-ms
  template:
    metadata:
      labels:
        app: openshift-hello-ms
    spec:
      containers:
      - image: tektutor/openshift-hello-ms:1.0
        name: openshift-hello-ms
