Day3/hello-microservice/openshift-helloms-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: openshift-hello-ms
  name: openshift-hello-ms
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: openshift-hello-ms
status:
  loadBalancer: {}
